Make app multipage

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,23 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Caesar Cipher Reloaded</title>
+    <title>Sinatra Projects</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <h1>Caesar Cipher Reloaded</h1>
+    <h1>Sinatra Projects</h1>
 
-    <form method="POST" action="/">
-      <span>Text to Cipher:</span>
-      <input type="text" name="text"/>
-      <span>Shift Factor:</span>
-      <input type="text" name="shift_factor" value="5">
-      <input type="submit" value="Cipher"/>
-      <br />
-    </form>
+    <a href="/caesar_cipher">Caesar Cipher</a>
+    <a href="/hangman">Hangman</a>
 
-    <% if @string %>
-      <p>Coded string: <span><%= @string %></span></p>
-    <% end %>
   </body>
 </html>
