Finish game logic

--- a/views/hangman.erb
+++ b/views/hangman.erb
@@ -8,24 +8,34 @@
   <body>
     <h1>Hangman</h1>
     <a class="home" href="/">Home</a>
-
-    <form method="POST" action="/hangman">
-      <span>Guess a letter:</span>
-      <input type="text" name="letter" maxlength="1" />
-      <input type="submit" value="Search"/>
-      <br />
-    </form>
     
-    <% if @letter %>
-      <p>Letter entered: <span><%= @letter %></span></p>
-      <p>Letters used: <%= @letters %></p>
-    <% end %>
+    palabra <%= @show_word.join(' ') %>
+    <% if @error_message == "you lost!" %>
+      You lost!   
+      <a href="/">Continue</a>
+    <% elsif @error_message == "you won!" %>
+      You won!
+      <a href="/">Continue</a>
+    <% else %>
     
-    <% if @secret_word %>
-      <p>Secret Word: <span><%= @secret_word %></span></p>
-      <%= @show_word %> == <%= @turn %>
-      Message: <%= @error_message %>
+      <form method="POST" action="/hangman">
+        <span>Guess a letter:</span>
+        <input type="text" name="letter" maxlength="1" />
+        <input type="submit" value="Search"/>
+        <br />
+      </form>
+      
+      <% if @letter %>
+        <p>Letter entered: <span><%= @letter %></span></p>
+        <p>Letters used: <%= @letters.join(', ') %></p>
+        
+      <% end %>
+      
+      <% if @secret_word %>
+        <p>Secret Word: <span><%= @secret_word %></span></p>
+         == <%= @turn %>
+        Message: <%= @error_message %>
+      <% end %>
     <% end %>
-
   </body>
 </html>
