--- a/views/index.erb
+++ b/views/index.erb
@@ -8,8 +8,10 @@
   <body>
     <h1>Sinatra Projects</h1>
 
-    <a href="/caesar_cipher">Caesar Cipher</a>
-    <a href="/hangman">Hangman</a>
+    <div class="container">
+      <div class="game"><a href="/caesar_cipher">Caesar Cipher</a></div>
+      <div class="game"><a href="/hangman">Hangman</a></div>
+    </div>
 
   </body>
 </html>
